--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,22 @@ version: 2
 jobs:
   build:
     docker:
-      - image: node:alpine
+      - image: circleci/node:7.10
+    working_directory: ~/repo
+
     steps:
       - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
+
       - run: yarn install
-      - run: npm run lint
-      - run: npm run build
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run: yarn run lint
+      - run: yarn run build
