--- a/package.json
+++ b/package.json
@@ -7,60 +7,55 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "gulp serve --env development --require babel-register",
-    "build": "gulp build-revision --env production --require babel-register",
+    "dev": "gulp serve --env development --require @babel/register",
+    "build": "gulp build-revision --env production --require @babel/register",
     "eslint": "eslint ./src ./gulpfile.js webpack.config.js",
     "stylelint": "stylelint ./src/css/*.css",
     "lint": "npm run eslint && npm run stylelint"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "browser-sync": "^2.23.6",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "browser-sync": "^2.24.7",
     "del": "^3.0.0",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
     "gulp-environments": "^0.1.2",
-    "gulp-htmlmin": "^5.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-nunjucks-render": "^2.2.2",
-    "gulp-postcss": "^7.0.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rev": "^8.1.1",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-replace": "^0.4.4",
     "gulp-sourcemaps": "^2.6.4",
-    "postcss": "^7.0.0",
+    "postcss": "^7.0.2",
     "postcss-assets": "^5.0.0",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-nested": "^4.0.0",
+    "postcss-import": "^12.0.0",
+    "postcss-nested": "^4.1.0",
     "postcss-nesting": "^6.0.0",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.3.1",
+    "postcss-reporter": "^6.0.0",
+    "postcss-url": "^8.0.0",
     "pump": "^3.0.0",
-    "stylelint": "^9.1.3",
+    "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
     "sw-precache": "^5.2.1",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.2.0",
-    "webpack-stream": "^5.0.0"
-  },
-  "dependencies": {
-    "postcss-normalize": "^7.0.0"
+    "webpack": "^4.18.0",
+    "webpack-stream": "^5.1.1",
+    "postcss-normalize": "^7.0.1"
   }
 }
