--- a/package.json
+++ b/package.json
@@ -14,48 +14,48 @@
     "lint": "npm run eslint && npm run stylelint"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.2",
-    "browser-sync": "^2.24.7",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.1",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
     "gulp-environments": "^0.1.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^8.0.0",
-    "gulp-rev": "^8.1.1",
+    "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-replace": "^0.4.4",
     "gulp-sourcemaps": "^2.6.4",
-    "postcss": "^7.0.2",
+    "postcss": "^7.0.5",
     "postcss-assets": "^5.0.0",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.0",
-    "postcss-nesting": "^6.0.0",
+    "postcss-nesting": "^7.0.0",
+    "postcss-normalize": "^7.0.1",
+    "postcss-preset-env": "^6.4.0",
     "postcss-reporter": "^6.0.0",
     "postcss-url": "^8.0.0",
     "pump": "^3.0.0",
-    "stylelint": "^9.5.0",
+    "stylelint": "^9.7.1",
     "stylelint-config-standard": "^18.2.0",
-    "sw-precache": "^5.2.1",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.18.0",
+    "webpack": "^4.25.1",
     "webpack-stream": "^5.1.1",
-    "postcss-normalize": "^7.0.1"
+    "workbox-build": "^3.6.3"
   }
 }
