update readme, add badges, update greenkeeper

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,27 +2,24 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:10
-    working_directory: ~/repo
-
+      - image: 'circleci/node:latest'
     steps:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
+            - node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - node-v1-{{ .Branch }}-
+            - node-v1-
       - run:
-          name: prepare greenkeeper-lockfile
-          command: |
-            echo 'export PATH=$(yarn global bin):$PATH' >> $BASH_ENV
-            source $BASH_ENV
-            yarn global add greenkeeper-lockfile@1
-      - run: yarn install
-      - run: greenkeeper-lockfile-update
+          name: install
+          command: npm install
+      - run:
+          name: lint
+          command: npm run lint
+      - run:
+          name: build
+          command: npm run build
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: yarn run lint
-      - run: yarn run build
-      - run: greenkeeper-lockfile-upload
+            - ~/usr/local/lib/node_modules
+          key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
