--- a/package.json
+++ b/package.json
@@ -14,48 +14,57 @@
     "lint": "npm run eslint && npm run stylelint"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "browser-sync": "^2.26.3",
-    "del": "^4.0.0",
-    "eslint": "^5.12.1",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "del": "^4.1.1",
+    "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.15.0",
-    "gulp": "^4.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
     "gulp-environments": "^0.1.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-postcss": "^8.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-replace": "^0.4.4",
-    "gulp-sourcemaps": "^2.6.4",
-    "postcss": "^7.0.14",
+    "gulp-sourcemaps": "^2.6.5",
+    "husky": "^2.7.0",
+    "postcss": "^7.0.17",
     "postcss-assets": "^5.0.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.1.1",
+    "postcss-nested": "^4.1.2",
     "postcss-nesting": "^7.0.0",
-    "postcss-normalize": "^7.0.1",
-    "postcss-preset-env": "^6.5.0",
+    "postcss-normalize": "^8.0.1",
+    "postcss-preset-env": "^6.6.0",
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
     "pump": "^3.0.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.29.0",
+    "webpack": "^4.35.0",
     "webpack-stream": "^5.2.1",
-    "workbox-build": "^4.0.0"
+    "workbox-build": "^4.3.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
